# office-automation

./: .gitignore  API.md  CLAUDE.md  CLI_DESIGN_SPEC_V2.md  CLI_DESIGN_SPEC_V3.md  Cargo.toml  GOTCHAS.md  LICENSE  LOCAL_TESTING.md  PPTX_DATA_ARCHITECTURE.md  README.md  example_runfile.toml  install.ps1  plan.md  test_runfile.toml
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
oa_run_test/: example_runfile.toml  test_runfile.py  test_runfile.toml
src/: cli.rs  config.rs  error.rs  lib.rs  main.rs
src/com/: cleanup.rs  dispatch.rs  mod.rs  session.rs  variant.rs
src/commands/: check.rs  clean.rs  config_cmd.rs  diff.rs  info.rs  mod.rs  py_parser.rs  run.rs  update.rs
src/office/: app.rs  constants.rs  excel_data.rs  mod.rs  presentation.rs  shapes.rs
src/pipeline/: chart_updater.rs  color_coder.rs  delta_updater.rs  linker.rs  mod.rs  table_updater.rs  verbose.rs
src/shapes/: formatting.rs  inventory.rs  matcher.rs  mod.rs
src/utils/: cell_ref.rs  color.rs  file_picker.rs  link_parser.rs  mod.rs  process.rs
src/zip_ops/: chart_data.rs  detector.rs  mod.rs  relinker.rs  xml_stream.rs
tests/: cli_e2e.rs  com_smoke.rs  zip_relink.rs
