[package]
name = "office-automation"
version = "0.2.0"
edition = "2024"
description = "Windows CLI tool that automates PowerPoint and Excel via COM"
license = "MIT"
repository = "https://github.com/albertxli/office-automation"
keywords = ["powerpoint", "excel", "office", "com", "automation"]
categories = ["command-line-utilities"]

[[bin]]
name = "oa"
path = "src/main.rs"

[dependencies]
clap = { version = "4.6", features = ["derive"] }
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Ole",
    "Win32_System_Variant",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
] }
zip = "8.2"
quick-xml = "0.39"
serde = { version = "1.0", features = ["derive"] }
toml = "1.0"
thiserror = "2.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
indicatif = "0.18"
colored = "3.1"
console = "0.16"
glob = "0.3"
sysinfo = "0.38"
rfd = "0.17"
regex = "1"
rayon = "1.10"
bumpalo = { version = "3.17", features = ["collections"] }
lasso = "0.7"
enum_dispatch = "0.3"

[dev-dependencies]
tempfile = "3.25"
assert_cmd = "2.1"
predicates = "3.1"
